--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@
   --background-hero: #2f303a;
   --background-porfolio-botton: #f5f4fa;
 }
+html{
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 body {
   background-color: var(--h1-text-color);
   color: var(--title-text-color);
@@ -24,6 +32,17 @@ body {
 h1, h2, h3, h4,h5,h6{
   margin: 0;
 }
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+p {
+  margin: 0;
+}
+button{
+  border: 1px solid transparent;
+}
 /* цвет основного текста #212121 */
 /* вторичный цвет текста #757575 */
 /* цвет для h1 #FFFFFF */
@@ -36,7 +55,13 @@ h1, h2, h3, h4,h5,h6{
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  /* background-color: tomato; */
+  margin-left: auto;
+  margin-right: auto;
+  border: tomato 1px solid;
+}
+.section{
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .logo {
   color: var(--acent-color);
@@ -92,6 +117,8 @@ h1, h2, h3, h4,h5,h6{
 /* Hero */
 .hero {
   background-color: var(--background-hero);
+  text-align: center;
+  padding: 200px 0;
 }
 .hero-captoin {
   color: var(--h1-text-color);
@@ -100,12 +127,14 @@ h1, h2, h3, h4,h5,h6{
   font-size: 44px;
   line-height: 1.4;
 
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  margin-bottom: 30px;
+  
 }
 
-.button {
+.button-hero {
   font-family: inherit;
   cursor: pointer;
   background-color: var(--acent-color);
@@ -115,11 +144,11 @@ h1, h2, h3, h4,h5,h6{
   font-size: 16px;
   line-height: 1.8;
 
-  display: inline-block;
   letter-spacing: 0.06em;
 
   border-radius: 4px;
   padding: 10px 32px;
+  min-width: 200px;
 }
 /* hang-section */
 .list-items {
@@ -130,6 +159,8 @@ h1, h2, h3, h4,h5,h6{
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  margin-bottom: 10px;
 }
 .items-text {
   color: var(--title-text-color);
@@ -147,6 +178,8 @@ h1, h2, h3, h4,h5,h6{
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
+
+  margin-bottom: 50px;
 }
 /* my-team section */
 .team-title {
@@ -157,14 +190,20 @@ h1, h2, h3, h4,h5,h6{
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
-}
 
+  margin-bottom: 50px;
+}
+.my-team{
+  background-color: var(--background-porfolio-botton);
+}
 .team-worker {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
+
+  margin-bottom: 10px;
 }
 .worker-position {
   color: var(--title-text-color);
@@ -178,7 +217,15 @@ h1, h2, h3, h4,h5,h6{
 /* footer */
 .footer {
   background-color: var(--background-hero);
+  padding:60px 0;
 }
+.footer-list{
+  margin-bottom: 9px;
+}
+.footer-list:last-child{
+  margin-bottom: 0;
+}
+
 .icon {
   color: var(--acent-color);
   font-family: "Raleway", sans-serif;
@@ -196,6 +243,9 @@ h1, h2, h3, h4,h5,h6{
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+
+  margin-bottom: 20px;
+  display: inline-block;
 }
 .address-block{
 font-style: normal;
@@ -238,6 +288,9 @@ font-style: normal;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.03em;
+
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 .button-filter:hover,
 .button-filter:focus {
